--- a/index.html
+++ b/index.html
@@ -475,5 +475,31 @@
 
         </div>
     </div>
+    <ul class="fixed-menu">
+        <li class="fixed-menu__item">
+            <a class="fixed-menu__link" href="" data-scroll-to="0"></a>
+        </li>
+        <li class="fixed-menu__item">
+            <a class="fixed-menu__link" href="" data-scroll-to="1"></a>
+        </li>
+        <li class="fixed-menu__item">
+            <a class="fixed-menu__link" href="" data-scroll-to="2"></a>
+        </li>
+        <li class="fixed-menu__item">
+            <a class="fixed-menu__link" href="" data-scroll-to="3"></a>
+        </li>
+        <li class="fixed-menu__item">
+            <a class="fixed-menu__link" href="" data-scroll-to="4"></a>
+        </li>
+        <li class="fixed-menu__item">
+            <a class="fixed-menu__link" href="" data-scroll-to="5"></a>
+        </li>
+        <li class="fixed-menu__item">
+            <a class="fixed-menu__link" href="" data-scroll-to="6"></a>
+        </li>
+        <li class="fixed-menu__item">
+            <a class="fixed-menu__link" href="" data-scroll-to="7"></a>
+        </li>
+    </ul>
 </body>
 </html>
